# apt-awscli-v2

./: .gitignore  LICENSE  README.md
cloudflare/: .dev.vars.example  README.md  index.js  package-lock.json  package.json  wrangler.toml
lambda/: Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs
lambda/.cargo/: audit.toml  config.toml
lambda/examples/: bench_deb.rs
lambda/metadata/: Release
lambda/metadata/DEBIAN/: control  postinst  prerm
lambda/src/: apt_index.rs  builder.rs  cloudflare.rs  config.rs  deb.rs  deploy.rs  lib.rs  logging.rs  main.rs  s3_sync.rs  sign.rs  smp_builder.rs  version.rs
pulumi/: .gitignore  Pulumi.sample.yaml  Pulumi.yaml  README.md  package-lock.json  package.json  tsconfig.json
pulumi/scripts/: bootstrap.ts  cf-config.ts  cf-purge.ts  confirm-subscription.ts  destroy.ts  diff.ts  generate-index-html.ts  invoke.ts  logs.ts  preflight.ts  preview.ts  restore-config.ts  up-iam.ts  up.ts  update-lambda-code.ts
pulumi/src/: check-and-build.ts  cloudflare.ts  config.ts  gpg.ts  iam.ts  index.ts  indexHtml.ts  lambda.ts  lambdaSource.ts  notification.ts  pulumiAsset.ts  scheduler.ts  storage.ts
pulumi/tests/: cloudflare.test.ts  config.test.ts  storage.test.ts
tools/: README.md  get-versions.sh  tag-version.sh  update-and-release.sh  update-packages.sh
