[package]
name = "apt-awscli-v2-lambda"
version = "0.0.0"
edition = "2021"
license = "MIT"

[lib]
name = "apt_awscli_v2_lambda"
path = "src/lib.rs"

[[bin]]
name = "apt-awscli-v2-lambda"
path = "src/main.rs"

[dependencies]
# Lambda
lambda_runtime = "1.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS SDK
# default-features = false + explicit feature list selects only the modern
# rustls 0.23 path (`default-https-client`). The legacy `rustls` feature on
# these crates pulls in rustls 0.21 / rustls-webpki 0.101, which RustSec has
# flagged with multiple advisories.
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio", "credentials-process"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-sdk-ssm = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }

# HTTP / download
# `rustls-native-certs` was removed in reqwest 0.13.3 (the AWS CLI download
# origin, GitHub, and Cloudflare API all chain to well-known public CAs that
# the bundled webpki-roots cover).
reqwest = { version = "0.13", default-features = false, features = ["stream", "blocking", "rustls"] }

# Archive operations
zip = "8"
tar = "0.4"
zstd = { version = "0.13", features = ["zstdmt"] }
ar = "0.9"

# GPG signing
pgp = "0.19"
rand = "0.8"

# Hashing
sha1 = "0.11"
sha2 = "0.11"
md-5 = "0.11"

# Utilities
flate2 = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "env-filter"] }
anyhow = "1"
regex = "1"
futures = "0.3"
filetime = "0.2"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
